[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantpy"
version = "0.1.0"
description = "FIC AI Python Quantitative Finance Library"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "QuantPy Contributors"}]
keywords = ["quantitative finance", "interest rates", "derivatives", "hull-white", "sabr"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
]

[project.optional-dependencies]
ml = ["torch>=2.0"]
dev = ["pytest>=7", "pytest-cov"]
plot = ["matplotlib>=3.5"]

[tool.setuptools.packages.find]
where = ["."]
include = ["quantpy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
